src/App.css
input{
    appearance: none;-webkit-appearance: none;-ms-appearance: none;outline: none;border: none;
    font: inherit;border-radius: 0;width: 100%;padding: 0;
}

button{
    appearance: none;-webkit-appearance: none;-ms-appearance: none;outline: none;border: none;background: none;cursor: pointer;
}

body{font-size: 16px;font-family: 'Roboto';}

.sheet-wrapper{display: flex;flex-direction: column;}
.row{display: flex;flex-direction: row;}
.cell{width: 100px;height: 20px;line-height: 20px;padding: 2px;color: #000;border: 1px solid #c7c7c7;}
.header-cell{position: relative;text-align: center;background: #e8eaed;color: #626262;}
.header-cell:hover{background: #c7cbd1}

.context-menu-list{list-style: none;padding: 0;position: absolute; background: #fff; border: 1px solid #c7c7c7;}
.context-menu-item{padding: 0 5px;}
.context-menu-item:hover{background: #c7c7c7}
.context-menu-option{text-align: center;border-bottom: 1px solid #c7c7c7;color: #333;padding: 15px;width: 100%}

